--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=E:\\\\Musica
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\aalvarado\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
