refactoring del codigo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,13 @@ dist.jar=${dist.dir}/MSOD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jaudiotagger-2.2.3-sources.jar=C:\\Users\\aalvarado\\Downloads\\jaudiotagger-2.2.3-sources.jar
+file.reference.jaudiotagger-2.2.3.jar=C:\\Users\\aalvarado\\Downloads\\jaudiotagger-2.2.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jaudiotagger-2.2.3-sources.jar}:\
+    ${file.reference.jaudiotagger-2.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
