--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.jaudiotagger-2.2.3-sources.jar=C:\\Users\\aalvarado\\Downloads\\jaudiotagger-2.2.3-sources.jar
 file.reference.jaudiotagger-2.2.3.jar=C:\\Users\\aalvarado\\Downloads\\jaudiotagger-2.2.3.jar
+file.reference.lucene-analyzers-common-5.3.0.jar=C:\\Users\\aalvarado\\Downloads\\lucene-5.3.0\\lucene-5.3.0\\analysis\\common\\lucene-analyzers-common-5.3.0.jar
+file.reference.lucene-core-5.3.0.jar=C:\\Users\\aalvarado\\Downloads\\lucene-5.3.0\\lucene-5.3.0\\core\\lucene-core-5.3.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.jaudiotagger-2.2.3-sources.jar}:\
-    ${file.reference.jaudiotagger-2.2.3.jar}
+    ${file.reference.jaudiotagger-2.2.3.jar}:\
+    ${file.reference.lucene-core-5.3.0.jar}:\
+    ${file.reference.lucene-analyzers-common-5.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
